--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+  <a href="https://tjlandry.com">Click here to reload this page for no reason.</a>
+<p>We live in a society.</p>
 </body>
 </html>
