--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <h1>Hello World</h1>
-  <a href="https://tjlandry.com">Click here to reload this page for no reason.</a>
+  <a href="tjlandry.com">Click here to reload this page for no reason.</a>
 <p>We live in a society.</p>
 </body>
 </html>
