--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-  <a href="https://tjlandry.github.io">Click here to reload this page for no reason.</a>
-<p>We live in a society.</p>
+<h1 style="text-align: center;">THANOS SPOON</h1>
+<h1><video controls="controls" width="448" height="224">
+ <source src="https://i.ytimg.com/vi/8j-sOyKmDPc/maxresdefault.jpg" /></video></h1>
+<h1 style="text-align: center;">BRUH</h1>
+ <a href="https://tjlandry.github.io">Click here to reload this page for no reason.</a>
 </body>
 </html>
