--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <br>
             <img class="thumbnail" src="https://media.licdn.com/dms/image/C4E03AQEmhAjsnIzRdw/profile-displayphoto-shrink_200_200/0?e=1572480000&v=beta&t=ZdVKVNBFrigZ1rCC0XQde72-3yGjQXj60fFQzq1d3Ds">
             <h5>Todd Landry Jr.</h5>
-            <p>Hi! My name is TJ Landry and I'm currently in my Junior year at Louisiana State University. I am on track to graduate following the Spring semester of 2021 with a Bachelor's Degree in Information Systems & Decision Sciences.</p>
+            <p>Hi! My name is TJ Landry and I'm currently in my Junior year at Louisiana State University. I am on track to graduate following the 2021 Spring semester with a Bachelor's Degree in Information Systems & Decision Sciences.</p>
           </div>
         </div>
 
