--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <h5></h5>
             </div>
             <div class="column">
-              <img class="thumbnail" src="https://files.brightside.me/files/news/part_66/660860/8264060-A-tiny-puppy-Striking-a-tiny-puppy-pose-1544190301-728-16941a41db-1544515890.jpg">
+              <img class="thumbnail" src="https://cdn.discordapp.com/attachments/510294634354835476/616830568348385280/CLACK_Headshot__DSF3622_ECS6_Day_2_Joe_Stephens_2018_1.jpg">
               <h5></h5>
             </div>
             <div class="column">
